log/build_2022-05-11_12-03-27/xsens_driver/stderr.log
  File "/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/xsens_measure.py", line 286
    decode = f"{data:032b}"[::-1]
    ^
SyntaxError: invalid syntax

